--- a/sass/layouts/_address.scss
+++ b/sass/layouts/_address.scss
@@ -1,50 +1,34 @@
-.address {
-  &__item--mail {
-    margin-top: 9px;
-    margin-bottom: 9px;
+.address__list {
+  @extend%list;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  @include mq(desk) {
+    gap: 9px;
+    align-items: flex-start;
   }
+}
+.address__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include fonts(14px, 24px, 400, 00.03em);
+  font-style: normal;
 
-  @media screen and (min-width: 320px) and (max-width: 1199px) {
-    &__link--location,
-    &__link--tel,
-    &__link--mail {
-      text-align: center;
-      display: block;
-    }
-    &__item--mail {
-      margin-top: 8px;
-      margin-bottom: 8px;
-    }
-    
+  color: $light-gray-txt-cl-60;
+  transition-property: color;
+  @extend%animation;
+  &:hover,
+  &:focus {
+    color: $accent-txt-cl;
   }
-
-  &__link {
-   
-    font-style: normal;
-    line-height: calc(24 / 14);
-    text-decoration: none;
-
-    color: $light-gray-txt-cl-60;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  &__link--location {
-    display: inline-block;
-    font-style: normal;
-    line-height: 1.5;
-    text-align: center;
-    text-decoration: none;
-
+}
+.address__link--location {
+  color: $light-txt-cl;
+  &:hover,
+  &:focus {
     color: $light-txt-cl;
-  }
-  &__link--mail:hover,
-  &__link--mail:focus {
-    color: $accent-txt-cl;
-  }
-  &__link--tel:hover,
-  &__link--tel:focus {
-    color: $accent-txt-cl;
   }
 }
