--- a/sass/components/_module.scss
+++ b/sass/components/_module.scss
@@ -1,6 +1,7 @@
 @import './logo';
 @import './mobile.menu';
 @import './socials';
+@import './subscription-form';
 @import './backdrop';
 @import './modal';
 @import './register-form';
