--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
   list-style: none;
 }
 
-.address__link, .clients__link, .contacts__link, .nav__link, .register__check, .register__uncheck, .register__message, .register__icon, .register__field, .modal, .backdrop, .socials__link, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
+.address__link, .clients__link, .contacts__link, .nav__link, .register__check, .register__uncheck, .register__message, .register__icon, .register__field, .modal, .backdrop, .subscription__input, .socials__link, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -376,6 +376,94 @@ a {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.subscription__form {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 20px;
+}
+
+.subscription__label {
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+@media screen and (min-width: 1200px) {
+  .subscription__label {
+    margin-left: 0;
+  }
+}
+
+.subscription__input {
+  max-width: 450px;
+  padding: 15px 16px;
+  font-size: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  transition-property: border-color;
+}
+@media screen and (min-width: 480px) {
+  .subscription__input {
+    display: flex;
+    align-items: center;
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscription__input {
+    width: 358px;
+  }
+}
+.subscription__input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscription__input:focus, .subscription__input:hover {
+  border-color: #2196f3;
+}
+
+.subscription__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  min-width: 200px;
+  padding: 10px 62px 10px 28px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: transparent;
+}
+
+.subscription__icon {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  fill: #ffffff;
+}
+
 .backdrop {
   position: fixed;
   top: 0px;
@@ -486,7 +574,7 @@ a {
   outline: transparent;
   transition: border-color;
 }
-.register__field:focus {
+.register__field:focus, .register__field:hover {
   border-color: #2196f3;
 }
 
@@ -1288,15 +1376,16 @@ a {
 .footer__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 @media screen and (max-width: 767.98px) {
   .footer__container {
+    align-items: stretch;
     gap: 60px;
   }
 }
 @media screen and (min-width: 768px) {
   .footer__container {
+    align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -1355,6 +1444,28 @@ a {
   }
 }
 
+.footer__subscription {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: stretch;
+}
+@media screen and (min-width: 768px) {
+  .footer__subscription {
+    align-items: center;
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__subscription {
+    flex-direction: row;
+    align-items: flex-end;
+    margin-top: 12px;
+    margin-bottom: auto;
+    gap: 12px;
+  }
+}
+
 .address__list {
   display: flex;
   flex-direction: column;
@@ -1390,174 +1501,4 @@ a {
 }
 .address__link--location:hover, .address__link--location:focus {
   color: #ffffff;
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .subscription .subscription {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .subscription .subscription {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .subscription {
-    display: inline-flex;
-    gap: 12px;
-  }
-}
-
-.subscription__btn {
-  height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: transparent;
-}
-
-.subscription__icon {
-  position: absolute;
-  top: 13px;
-  right: 28px;
-  fill: #ffffff;
-}
-
-.subscription__label {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.subscription__input {
-  padding: 15px 16px;
-  font-size: 16px;
-  line-height: 1.25;
-  color: #ffffff;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: transparent;
-}
-
-.subscription__input::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscription__form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.subscription__label--mobile {
-  text-align: center;
-}
-
-.subscription__btn {
-  display: inline-flex;
-  position: relative;
-  padding: 10px 62px 10px 28px;
-  height: 50px;
-  min-width: 200px;
-}
-
-.subscription__input {
-  align-items: center;
-  max-width: 450px;
-}
-
-.subscription__form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.subscription__label--mobile {
-  text-align: center;
-}
-
-.subscription__btn {
-  display: inline-flex;
-  position: relative;
-  padding: 10px 62px 10px 28px;
-  height: 50px;
-  min-width: 200px;
-}
-
-.subscription__input {
-  width: 450px;
-}
-
-.subscription__form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.subscription__label {
-  padding-top: 12px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.subscription__input {
-  min-width: 358px;
-  padding: 15px 16px;
-  font-size: 16px;
-  line-height: 1.25;
-  color: #ffffff;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: transparent;
-}
-
-.subscription__input::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscription__btn {
-  position: relative;
-  margin-top: 48px;
-  padding: 10px 62px 10px 28px;
-  min-width: 200px;
-  height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: transparent;
-}
-
-.subscription__icon {
-  position: absolute;
-  top: 13px;
-  right: 28px;
-  fill: #ffffff;
 }/*# sourceMappingURL=main.css.map */
