--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,70 +1,56 @@
 .portfolio {
-  &__title {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  @include section;
+  background-color: $white-bg-cl;
+}
+.portfolio__title {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.portfolio__nav {
+  @extend%list;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 15px;
+  column-gap: 8px;
+  margin-bottom: 40px;
+  @include mq(tab) {
+    justify-content: center;
+    margin-bottom: 30px;
   }
-  @media screen and (max-width: 767px) {
-    &__nav {
-      display: flex;
-      flex-wrap: wrap;
-      margin-bottom: 40px;
-    }
-    &__item {
-      margin-bottom: 15px;
-    }
+  @include mq(desk) {
+    margin-bottom: 50px;
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    &__nav {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 30px;
-    }
-  }
-  @media screen and (min-width: 1200px) {
-    &__nav {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 50px;
-    }
-  }
+}
+.portfolio__btn {
+  padding: 4px 22px;
+  border-radius: 4px;
+  border: 2px solid transparent;
+  font-family: inherit;
 
-  &__nav .item:not(:last-child) {
-    margin-right: 8px;
-  }
+  @include fonts(16px, 26px, 500, 0.03em);
+  text-align: center;
 
-  &__btn {
-    padding: 6px 22px;
-    border-radius: 4px;
-    border: 4px solid transparent;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-
-    color: $dark-txt-cl;
-    background: $light-bg-cl;
-    transition-property: background-color, color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  &__btn--current {
-    color: $light-txt-cl;
-    background-color: $accent-bg-cl;
-  }
-  &__btn:hover,
-  &__btn:focus {
-    box-shadow: 0px 3px 1px $dark-cl-10, 0px 1px 2px $dark-cl-08,
-      0px 2px 2px $dark-cl-12;
+  color: $dark-txt-cl;
+  background: $light-bg-cl;
+  transition-property: background-color, color, box-shadow;
+  @extend%animation;
+  &:hover,
+  &:focus {
+    box-shadow: 0px 3px 1px $dark-cl-10, 0px 1px 2px $dark-cl-08, 0px 2px 2px $dark-cl-12;
     background-color: $accent-bg-cl;
     color: $light-txt-cl;
   }
+}
+.portfolio__btn--current {
+  color: $light-txt-cl;
+  background-color: $accent-bg-cl;
+  box-shadow: 0px 3px 1px $dark-cl-10, 0px 1px 2px $dark-cl-08, 0px 2px 2px $dark-cl-12;
 }
