--- a/css/main.css
+++ b/css/main.css
@@ -1329,8 +1329,14 @@ a {
   }
 }
 
+.product__item {
+  display: flex;
+  border: 1px solid #eeeeee;
+}
+
 .product__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
   background-color: #ffffff;
   transition-property: box-shadow;
 }
@@ -1341,9 +1347,11 @@ a {
 .product__wrap {
   position: relative;
   overflow: hidden;
+  display: flex;
 }
 
 .product__desc {
+  display: flex;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5555555556;
@@ -1352,30 +1360,47 @@ a {
 }
 
 .product__overlay {
-  padding: 63px 24px;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 10px 10px;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition-property: transform;
+}
+@media screen and (min-width: 480px) {
+  .product__overlay {
+    padding: 77px 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .product__overlay {
+    padding-top: 49px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .product__overlay {
+    padding-top: 63px;
+    padding-bottom: 63px;
+  }
 }
 .product__link:hover .product__overlay, .product__link:focus .product__overlay {
   transform: translateY(0%);
 }
 
 .product__meta {
-  display: block;
-  padding: 20px 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding-top: 24px;
+  padding-left: 24px;
+  padding-bottom: 24px;
+  padding-right: 24px;
 }
 
 .product__heading {
-  margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
