--- a/css/main.css
+++ b/css/main.css
@@ -1353,10 +1353,18 @@ a {
 .product__desc {
   display: flex;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 1.5555555556;
+  font-size: 14px;
+  line-height: 1.7142857143;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+@media screen and (min-width: 480px) {
+  .product__desc {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.5555555556;
+    letter-spacing: 0.03em;
+  }
 }
 
 .product__overlay {
@@ -1365,7 +1373,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 10px 10px;
+  padding: 15px 15px;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition-property: transform;
