--- a/sass/layouts/_product.scss
+++ b/sass/layouts/_product.scss
@@ -39,8 +39,10 @@
 
 .product__desc {
   display: flex;
-  @include fonts(18px, 28px, 400, 0.03em);
-
+  @include fonts(14px, 24px, 400, 0.03em);
+  @include mq(mob) {
+    @include fonts(18px, 28px, 400, 0.03em);
+  }
   color: $light-txt-cl;
 }
 
@@ -50,12 +52,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 10px 10px;
+  padding: 15px 15px;
 
   @include mq(mob) {
     padding: 77px 24px;
   }
-
   @include mq(tab) {
     padding-top: 49px;
   }
