--- a/sass/layouts/_product.scss
+++ b/sass/layouts/_product.scss
@@ -39,10 +39,8 @@
 
 .product__desc {
   display: flex;
-  @include fonts(14px, 24px, 400, 0.03em);
-  @include mq(mob) {
-    @include fonts(18px, 28px, 400, 0.03em);
-  }
+  @include fonts(18px, 28px, 400, 0.03em);
+  
   color: $light-txt-cl;
 }
 
@@ -50,21 +48,12 @@
   position: absolute;
   top: 0;
   left: 0;
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 100%;
-  padding: 15px 15px;
-
-  @include mq(mob) {
-    padding: 77px 24px;
-  }
-  @include mq(tab) {
-    padding-top: 49px;
-  }
-
-  @include mq(desk) {
-    padding-top: 63px;
-    padding-bottom: 63px;
-  }
+  padding-left: 24px;
+  padding-right: 24px;
 
   background-color: $blue-bg-cl-90;
   transform: translateY(+100%);
