--- a/css/main.css
+++ b/css/main.css
@@ -160,17 +160,12 @@ a {
   height: inherit;
   margin-left: auto;
   margin-right: auto;
-  padding: 36px 30px;
+  padding: 48px 40px;
   background-color: #ffffff;
   transform: translateY(0);
 }
 .backdrop--is-hidden .mobile-menu {
   transform: translateY(-100%);
-}
-@media screen and (min-width: 480px) {
-  .mobile-menu {
-    padding: 48px 40px;
-  }
 }
 @media screen and (min-width: 768px) {
   .mobile-menu {
@@ -263,18 +258,10 @@ a {
   display: block;
   margin-right: auto;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.1666666667;
   letter-spacing: 0.02em;
-}
-@media screen and (min-width: 480px) {
-  .mobile-menu-contacts__link {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 1.1666666667;
-    letter-spacing: 0.02em;
-    color: #757575;
-  }
+  color: #757575;
 }
 @media screen and (min-width: 768px) {
   .mobile-menu-contacts__link {
@@ -283,28 +270,17 @@ a {
 }
 .mobile-menu-contacts__link--mobile {
   font-weight: 500;
-  font-size: 28px;
-  line-height: 1.2142857143;
+  font-size: 34px;
+  line-height: 1.1764705882;
   letter-spacing: 0.02em;
   color: #2196f3;
-}
-@media screen and (min-width: 480px) {
-  .mobile-menu-contacts__link--mobile {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.1764705882;
-    letter-spacing: 0.02em;
-  }
 }
 
 .mobile-menu-socials__list {
   margin-top: auto;
-}
-@media screen and (max-width: 767.98px) {
-  .mobile-menu-socials__list {
-    display: flex;
-    align-items: center;
-  }
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 @media screen and (min-width: 768px) {
   .mobile-menu-socials__list {
@@ -312,13 +288,8 @@ a {
   }
 }
 
-.mobile-menu-socials__item {
-  margin-right: 10px;
-}
-@media screen and (min-width: 480px) {
-  .mobile-menu-socials__item:not(:last-child) {
-    margin-right: 20px;
-  }
+.mobile-menu-socials__item:not(:last-child) {
+  margin-right: 20px;
 }
 @media screen and (min-width: 768px) {
   .mobile-menu-socials__item {
@@ -328,18 +299,10 @@ a {
 
 .mobile-menu-socials__link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2857142857;
+  font-size: 18px;
+  line-height: 1.2222222222;
   letter-spacing: 0.02em;
   color: #2196f3;
-}
-@media screen and (min-width: 480px) {
-  .mobile-menu-socials__link {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.2222222222;
-    letter-spacing: 0.02em;
-  }
 }
 @media screen and (min-width: 768px) {
   .mobile-menu-socials__link {
@@ -619,19 +582,14 @@ a {
   margin-bottom: 30px;
 }
 
-.register__checkbox {
-  opacity: 0;
-}
-.register__checkbox:focus + .register__agreement-icon {
-  outline: 2px solid #2196f3;
-  outline-offset: 1px;
-  border-radius: 2px;
-}
 .register__checkbox:checked + .register__pic > .register__uncheck {
   opacity: 0;
 }
 .register__checkbox:checked + .register__pic > .register__check {
   opacity: 1;
+}
+.register__checkbox:focus + .register__pic > .register__uncheck {
+  fill: #2196f3;
 }
 
 .register__uncheck {
@@ -829,7 +787,7 @@ a {
 }
 @media screen and (min-width: 1200px) {
   .contacts__item:not(:last-child) {
-    margin-right: 27px;
+    margin-right: 30px;
   }
 }
 
@@ -1148,12 +1106,12 @@ a {
 .team__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
 }
 
 .team__wrap {
   padding-top: 30px;
   padding-bottom: 24px;
-  background-color: #ffffff;
 }
 @media screen and (min-width: 1200px) {
   .team__wrap {
@@ -1353,46 +1311,25 @@ a {
 .product__desc {
   display: flex;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7142857143;
+  font-size: 18px;
+  line-height: 1.5555555556;
   letter-spacing: 0.03em;
   color: #ffffff;
-}
-@media screen and (min-width: 480px) {
-  .product__desc {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.5555555556;
-    letter-spacing: 0.03em;
-  }
 }
 
 .product__overlay {
   position: absolute;
   top: 0;
   left: 0;
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 100%;
-  padding: 15px 15px;
+  padding-left: 24px;
+  padding-right: 24px;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition-property: transform;
-}
-@media screen and (min-width: 480px) {
-  .product__overlay {
-    padding: 77px 24px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .product__overlay {
-    padding-top: 49px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .product__overlay {
-    padding-top: 63px;
-    padding-bottom: 63px;
-  }
 }
 .product__link:hover .product__overlay, .product__link:focus .product__overlay {
   transform: translateY(0%);
