--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
   list-style: none;
 }
 
-.address__link, .product__overlay, .product__link, .portfolio__btn, .clients__link, .contacts__link, .nav__link, .register__check, .register__uncheck, .register__message, .register__icon, .register__field, .modal, .backdrop, .subscription__input, .socials__link, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
+.address__link, .product__overlay, .product__link, .portfolio__btn, .clients__link, .hero__button, .contacts__link, .nav__link, .register__check, .register__uncheck, .register__message, .register__icon, .register__field, .modal, .backdrop, .subscription__btn, .subscription__input, .socials__link, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -289,7 +289,9 @@ a {
 }
 
 .mobile-menu-socials__item:not(:last-child) {
-  margin-right: 20px;
+  margin-right: 9px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 @media screen and (min-width: 768px) {
   .mobile-menu-socials__item {
@@ -418,6 +420,10 @@ a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: transparent;
+  transition: background-color;
+}
+.subscription__btn:hover, .subscription__btn:focus {
+  background-color: #188ce8;
 }
 
 .subscription__icon {
@@ -937,6 +943,7 @@ a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 4px solid transparent;
+  transition: background-color;
 }
 @media screen and (min-width: 1200px) {
   .hero__button {
@@ -944,6 +951,9 @@ a {
     padding-right: 28px;
     min-width: 216px;
   }
+}
+.hero__button:hover, .hero__button:focus {
+  background-color: #188ce8;
 }
 
 .advantages {
