--- a/sass/components/_subscription-form.scss
+++ b/sass/components/_subscription-form.scss
@@ -71,6 +71,13 @@
   box-shadow: 0px 4px 4px $dark-cl-15;
   border-radius: 4px;
   border: transparent;
+
+  transition: background-color;
+  @extend%animation;
+  &:hover,
+  &:focus {
+    background-color: $blue-btn-cl;
+  }
 }
 .subscription__icon {
   position: absolute;
