--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -76,6 +76,11 @@
   margin-right: auto;
   padding: 6px 20px;
   min-width: 200px;
+  @include mq(desk) {
+    padding-left: 28px;
+    padding-right: 28px;
+    min-width: 216px;
+  }
 
   @include fonts(16px, 30px, 700, 0.06em);
 
@@ -84,9 +89,11 @@
   box-shadow: 0px 4px 4px $dark-cl-15;
   border-radius: 4px;
   border: 4px solid transparent;
-  @include mq(desk) {
-    padding-left: 28px;
-    padding-right: 28px;
-    min-width: 216px;
+  
+  transition: background-color;
+  @extend%animation;
+  &:hover,
+  &:focus {
+    background-color: $blue-btn-cl;
   }
 }
