--- a/sass/components/_register-form.scss
+++ b/sass/components/_register-form.scss
@@ -157,6 +157,8 @@
   border-radius: 4px;
   border: transparent;
 
+  transition-property: background-color;
+  @extend%animation;
   &:focus,
   &:hover {
     background-color: $blue-btn-cl;
