--- a/sass/components/_subscription-form.scss
+++ b/sass/components/_subscription-form.scss
@@ -72,7 +72,7 @@
   border-radius: 4px;
   border: transparent;
 
-  transition: background-color;
+  transition-property: background-color;
   @extend%animation;
   &:hover,
   &:focus {
