--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -90,7 +90,7 @@
   border-radius: 4px;
   border: 4px solid transparent;
   
-  transition: background-color;
+  transition-property: background-color;
   @extend%animation;
   &:hover,
   &:focus {
